[gd_scene load_steps=9 format=3]

[ext_resource type="Script" path="res://menus/media_player/HBMediaPlayerMenu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b1mbegd5nhs23" path="res://graphics/no_preview_texture.png" id="2"]
[ext_resource type="Texture2D" path="res://graphics/icons/media_player/shuffle.svg" id="3"]
[ext_resource type="Texture2D" path="res://graphics/icons/media_player/previous.svg" id="4"]
[ext_resource type="Texture2D" path="res://graphics/icons/media_player/play.svg" id="5"]
[ext_resource type="Texture2D" path="res://graphics/icons/media_player/pause.svg" id="6"]
[ext_resource type="Texture2D" path="res://graphics/icons/media_player/next.svg" id="7"]
[ext_resource type="Texture2D" path="res://graphics/icons/media_player/repeat.svg" id="8"]

[node name="MediaPlayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MainContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 350

[node name="PlaylistPanel" type="PanelContainer" parent="MainContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/PlaylistPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlaylistHeader" type="HBoxContainer" parent="MainContainer/PlaylistPanel/VBoxContainer"]
layout_mode = 2

[node name="PlaylistNameLabel" type="Label" parent="MainContainer/PlaylistPanel/VBoxContainer/PlaylistHeader"]
layout_mode = 2
size_flags_horizontal = 3
text = "Playlist: default"

[node name="NewPlaylistButton" type="Button" parent="MainContainer/PlaylistPanel/VBoxContainer/PlaylistHeader"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
tooltip_text = "New Playlist"
text = "+"

[node name="ChoosePlaylistButton" type="Button" parent="MainContainer/PlaylistPanel/VBoxContainer/PlaylistHeader"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
tooltip_text = "Choose Playlist"
text = "ðŸ“‚"

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/PlaylistPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlaylistContainer" type="VBoxContainer" parent="MainContainer/PlaylistPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="AddFilesButton" type="Button" parent="MainContainer/PlaylistPanel/VBoxContainer"]
layout_mode = 2
text = "Add Files..."

[node name="NewPlaylistDialog" type="ConfirmationDialog" parent="."]
title = "New Playlist"
size = Vector2i(300, 100)
visible = false

[node name="LineEdit" type="LineEdit" parent="NewPlaylistDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 292.0
offset_bottom = 39.0
placeholder_text = "Enter playlist name..."

[node name="ChoosePlaylistDialog" type="ConfirmationDialog" parent="."]
title = "Choose Playlist"
size = Vector2i(300, 200)
visible = false

[node name="ItemList" type="ItemList" parent="ChoosePlaylistDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 292.0
offset_bottom = 155.0

[node name="FolderChoiceDialog" type="ConfirmationDialog" parent="."]
title = "Choose Folder"
size = Vector2i(350, 180)
visible = false
ok_button_text = "Browse..."

[node name="VBoxContainer" type="VBoxContainer" parent="FolderChoiceDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 342.0
offset_bottom = 135.0

[node name="Label" type="Label" parent="FolderChoiceDialog/VBoxContainer"]
layout_mode = 2
text = "Where would you like to browse for music?"

[node name="OfficialSongsButton" type="Button" parent="FolderChoiceDialog/VBoxContainer"]
layout_mode = 2
text = "Official Songs"

[node name="EditorFolderButton" type="Button" parent="FolderChoiceDialog/VBoxContainer"]
layout_mode = 2
text = "Editor Songs"

[node name="WorkshopFolderButton" type="Button" parent="FolderChoiceDialog/VBoxContainer"]
layout_mode = 2
text = "Steam Workshop"

[node name="OfficialSongsDialog" type="ConfirmationDialog" parent="."]
title = "Select Official Songs"
size = Vector2i(400, 400)
visible = false
ok_button_text = "Add Selected"

[node name="VBoxContainer" type="VBoxContainer" parent="OfficialSongsDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -40.0

[node name="HBoxContainer" type="HBoxContainer" parent="OfficialSongsDialog/VBoxContainer"]
layout_mode = 2

[node name="SelectAllButton" type="Button" parent="OfficialSongsDialog/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Select All"

[node name="SelectNoneButton" type="Button" parent="OfficialSongsDialog/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Select None"

[node name="OfficialSongsList" type="ItemList" parent="OfficialSongsDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
select_mode = 1

[node name="PlayerPanel" type="PanelContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/PlayerPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ThumbnailDisplay" type="TextureRect" parent="MainContainer/PlayerPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5

[node name="NowPlayingLabel" type="Label" parent="MainContainer/PlayerPanel/VBoxContainer"]
layout_mode = 2
text = "No Track Selected"
horizontal_alignment = 1

[node name="ArtistLabel" type="Label" parent="MainContainer/PlayerPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[node name="ProgressContainer" type="VBoxContainer" parent="MainContainer/PlayerPanel/VBoxContainer"]
layout_mode = 2

[node name="ProgressBar" type="HSlider" parent="MainContainer/PlayerPanel/VBoxContainer/ProgressContainer"]
layout_mode = 2
max_value = 100.0
step = 0.1

[node name="TimeContainer" type="HBoxContainer" parent="MainContainer/PlayerPanel/VBoxContainer/ProgressContainer"]
layout_mode = 2

[node name="CurrentTimeLabel" type="Label" parent="MainContainer/PlayerPanel/VBoxContainer/ProgressContainer/TimeContainer"]
layout_mode = 2
text = "0:00"

[node name="Spacer" type="Control" parent="MainContainer/PlayerPanel/VBoxContainer/ProgressContainer/TimeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TotalTimeLabel" type="Label" parent="MainContainer/PlayerPanel/VBoxContainer/ProgressContainer/TimeContainer"]
layout_mode = 2
text = "0:00"

[node name="ControlsContainer" type="HBoxContainer" parent="MainContainer/PlayerPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ShuffleButton" type="Button" parent="MainContainer/PlayerPanel/VBoxContainer/ControlsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Shuffle"
icon = ExtResource("3")

[node name="PrevButton" type="Button" parent="MainContainer/PlayerPanel/VBoxContainer/ControlsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Previous"
icon = ExtResource("4")

[node name="PlayButton" type="Button" parent="MainContainer/PlayerPanel/VBoxContainer/ControlsContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
tooltip_text = "Play/Pause"
icon = ExtResource("5")

[node name="NextButton" type="Button" parent="MainContainer/PlayerPanel/VBoxContainer/ControlsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Next"
icon = ExtResource("7")

[node name="RepeatButton" type="Button" parent="MainContainer/PlayerPanel/VBoxContainer/ControlsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
tooltip_text = "Repeat"
icon = ExtResource("8")

[node name="BottomControls" type="HBoxContainer" parent="MainContainer/PlayerPanel/VBoxContainer"]
layout_mode = 2

[node name="PlayInGameButton" type="Button" parent="MainContainer/PlayerPanel/VBoxContainer/BottomControls"]
layout_mode = 2
tooltip_text = "Play this song in the game"
text = "ðŸŽ® Play"

[node name="Spacer" type="Control" parent="MainContainer/PlayerPanel/VBoxContainer/BottomControls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VolumeContainer" type="HBoxContainer" parent="MainContainer/PlayerPanel/VBoxContainer/BottomControls"]
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="MainContainer/PlayerPanel/VBoxContainer/BottomControls/VolumeContainer"]
layout_mode = 2
text = "ðŸ”Š"

[node name="VolumeSlider" type="HSlider" parent="MainContainer/PlayerPanel/VBoxContainer/BottomControls/VolumeContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0
